RESOLVED FIXED252301
[css-nesting] Fix evaluation of @supports(selector(&) {})
https://bugs.webkit.org/show_bug.cgi?id=252301
Summary [css-nesting] Fix evaluation of @supports(selector(&) {})
Matthieu Dubet
Reported 2023-02-15 00:20:51 PST
The @supports at-rule should correctly work with the nesting selector
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-15 00:21:13 PST
Matthieu Dubet
Comment 2 2023-02-27 12:25:54 PST
EWS
Comment 3 2023-03-01 07:19:31 PST
Committed 261004@main (c4adae4df0f3): <https://commits.webkit.org/261004@main> Reviewed commits have been landed. Closing PR #10747 and removing active labels.
Tim Nguyen (:ntim)
Comment 4 2023-03-21 10:27:30 PDT
*** Bug 254204 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.